--- a/style.css
+++ b/style.css
@@ -125,3 +125,28 @@ footer {
 hr {
     margin-right: 80px;
 }
+@media screen and (min-width: 400px) {
+    body {
+      
+    }
+    #splitImage {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .buttonBtn {
+        padding-bottom: 40px;
+    }
+    #toolContent {
+        display: grid;
+        padding: 20px 80px 20px 0;
+    }
+  }
+  
+  @media screen and (min-width: 800px) {
+    body {
+      background-color: lavender;
+    }
+    .buttonBtn {
+        
+    }
+  
