added font styling to contribute area

--- a/style.css
+++ b/style.css
@@ -106,6 +106,17 @@ main {
     padding: 30px 200px;
     flex-direction: row-reverse;
 }
+.contributeTextContent {
+    font-size: 18px;
+    font-weight: 300;
+    word-spacing: 2px;
+    line-height: 1.6em;
+    color: rgba(255, 255, 255, 0.9);
+}
+.contributeTextContent h3 {
+    font-weight: 300;
+    word-spacing: 2px;
+}
 .buttonBtn {
     
     
