--- a/style.css
+++ b/style.css
@@ -174,6 +174,13 @@ hr {
         display: grid;
         padding: 20px 80px 20px 30px;
     }
+    #toolContent p {
+        padding-left: 10px;
+        font-size: 1rem;
+    }
+    #toolContent h3 {
+        margin-top: 80px;
+    }
     .gitChar {
         float: right;
     }
